--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "proxy": "http://localhost:8080"
+
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,3 +55,4 @@
   "author": "",
   "license": "ISC"
 }
+
